# pi-osdev-rust

./: .gitignore  README.md
kernel/: Cargo.toml  linker.ld
kernel/.cargo/: config.toml
kernel/src/: boot.rs  main.rs
