[package]
name = "kernel"
version = "0.1.0"
edition = "2021"




[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }